# diplomacy

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  generate-datc.sh  publish.sh
.github/workflows/: ci.yml
diplomacy/: Cargo.toml
diplomacy/src/: calendar.rs  lib.rs  nation.rs  time.rs  unit.rs
diplomacy/src/game/: config.rs  mod.rs  phase.rs  turn.rs  world.rs
diplomacy/src/geo/: border.rs  borders.csv  builder.rs  map.rs  mod.rs  province.rs  provinces.csv  region.rs  standard.rs
diplomacy/src/judge/: build.rs  calc.rs  convoy.rs  mod.rs  outcome.rs  resolver.rs  rulebook.rs  state_type.rs  strength.rs  support.rs
diplomacy/src/judge/retreat/: mod.rs  resolver.rs  start.rs
diplomacy/src/order/: mod.rs
diplomacy/src/order/command/: build_phase.rs  main_phase.rs  retreat_phase.rs
diplomacy/src/parser/: error.rs  mod.rs
diplomacy/tests/: cycles.rs  datc-parser.js  datc.rs  lib.rs  strength.rs  util.rs  world.rs
json_tests/: Cargo.toml  datc.json  dipmath.json  tests.schema.json
json_tests/src/: case.rs  lib.rs  map_key.rs  outcome_with_state.rs  rustgen.rs
src/: lib.rs  nation.rs  power.rs  unit.rs
src/game/: config.rs  mod.rs  phase.rs  turn.rs  world.rs
src/geo/: border.rs  borders.csv  builder.rs  location.rs  map.rs  mod.rs  province.rs  provinces.csv  region.rs  regions.csv  repro.rs  standard.rs  world.rs
src/judge/: calc.rs  convoy.rs  mod.rs  outcome.rs  prelude.rs  resolver.rs  retreat.rs  rulebook.rs  state_type.rs  strength.rs  support.rs
src/judge/retreat/: mod.rs  resolver.rs  start.rs
src/order/: mod.rs
src/order/command/: build.rs  build_phase.rs  main_phase.rs  mod.rs  retreat.rs  retreat_phase.rs  standard.rs
src/parser/: error.rs  mod.rs
tests/: basic.rs  cycles.rs  datc.rs  lib.rs  util.rs
