[package]
name = "diplomacy"
version = "0.1.1"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
edition = "2018"
description = "Adjudication library for the board game Diplomacy"
documentation = "https://docs.rs/diplomacy/0.1.1"
repository = "https://github.com/TedDriggs/diplomacy"
license = "MIT"

[dependencies]
from_variants = "0.4.0"
lazy_static = "1.4.0"
petgraph = "0.6.5"
serde = { version = "1.0.112", features = [ "derive" ], optional = true }

[features]
dependency-graph = []
