[package]
name = "diplomacy"
version = "0.1.2"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
edition = "2021"
description = "Adjudication library for the board game Diplomacy"
documentation = "https://docs.rs/diplomacy/0.1.2"
repository = "https://github.com/TedDriggs/diplomacy"
license = "MIT"

[dependencies]
from_variants = "1.0.2"
lazy_static = "1.4.0"
petgraph = "0.6.5"
serde = { version = "1.0.112", features = ["derive"], optional = true }

[features]
dependency-graph = []
