[package]
name = "json_tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "JSON serialization tests for diplomacy crate"

[dependencies]
anyhow = "1.0.86"
diplomacy = { version = "0.1.3", path = "../diplomacy", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
