[package]
name = "json_tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "JSON serialization tests for diplomacy crate"

[dependencies]
anyhow = "1.0.86"
diplomacy = { version = "0.1.3", path = "../diplomacy", features = ["serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
prettyplease = "0.2.36"
proc-macro2 = "1.0.97"
quote = { version = "1.0.40", default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
serde_with = { version = "3.14.0", features = ["macros"] }
syn = { version = "2.0.105", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }
